--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,12 @@ buildscript {
         google()
         jcenter()
     }
+
     dependencies {
+        ext.nav_version = "2.3.5"
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
